# scrapping_fipe

./: 2018-4.csv  2018.parquet  2023_10.csv  Dockerfile  FIPE.py  README.md  entrypoint.sh  extract.py  fipe.csv  pyproject.toml  requeriments.txt  requirements.txt  scrapy.cfg  spider.py
FIPE/: items.py  middlewares.py  pipelines.py  settings.py
FIPE/spiders/: Fipe.py
